--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 
 
 .metadata
-bin/
+"Projct Final"/bin/
 tmp/
 *.tmp
 *.bak
@@ -26,7 +26,7 @@ local.properties
 # CDT-specific (C/C++ Development Tooling)
 .cproject
 
-# CDT- autotools 
+# CDT- autotools
 .autotools
 
 # Java annotation processor (APT)
